--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="#section2">About Me</a>
                     <a class="nav-link" href="#section3">Skills</a>
+                    <a class="nav-link" href="#section3.5">Certificates</a>
                     <a class="nav-link" href="#section4">Contact</a>
                 </div>
             </div>
@@ -29,7 +30,7 @@
         <div class="container text-center text-white">
             <h1><b>Hari Prasath S</b></h1>
             <h2><b>Fullstack Developer</b></h2>
-            <button id="resume" class="btn btn-dark mt-3">Resume</button><br>
+            <button id="resume" class="btn btn-dark mt-3"><i class="fa-solid fa-download"></i> <a href="C:\Users\91882\Downloads\HARI PRASATH S.png">Resume</a></button><br>
             <a href="#" class="text-white mx-2"><i class="fa-brands fa-linkedin fa-2x"></i></a>
             <a href="#" class="text-white mx-2"><i class="fa-brands fa-github fa-2x"></i></a>
         </div>
@@ -72,6 +73,20 @@
             <div class="skill" style="--level: 75%">Core Java <div class="level-bar"></div></div>
             <div class="skill" style="--level: 60%">Data Analysis <div class="level-bar"></div></div>
             <div class="skill" style="--level: 85%">Problem Solving <div class="level-bar"></div></div>
+        </div>
+    </div>
+
+    <!--certificate section-->
+    <div class="section3.5" id="section3.5">
+        <div class="certificates">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
         </div>
     </div>
 
